# universal-bi-agent

./: .gitignore  SCOPE.md  package.json  pnpm-lock.yaml
.github/workflows/: release-desktop.yml
apps/desktop/: index.html  package.json
apps/desktop/sidecar/: build-binary.mjs  build.mjs  main.mjs  sea-config.json  version.mjs
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/binaries/: .gitkeep
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: duckdb_server.rs  lib.rs  main.rs
apps/desktop/src/components/: DropZone.tsx
apps/desktop/src/hooks/: useSidecar.ts
apps/desktop/src/pages/: FolderManager.tsx  Logs.tsx  Settings.tsx  SyncStatus.tsx
docs/: v2-agent-build-install.md
scripts/: sync-integrity.mjs  sync-version.mjs
