[package]
name = "universal-bi-desktop"
version = "0.1.0"
description = "Universal BI Desktop Agent"
authors = ["Universal BI"]
edition = "2021"

[lib]
name = "universal_bi_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
