[package]
name = "universal-bi-desktop"
version = "0.1.0"
description = "Universal BI Desktop Agent"
authors = ["Universal BI"]
edition = "2021"

[lib]
name = "universal_bi_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Persistent in-process DuckDB engine (Phase 0 G0a-proven on Win11/MSVC). default-features=false
# drops the extension-download HTTP/TLS tree; "bundled" vendors + compiles the engine via cc
# (needs the rstrtmgr link directive on Windows — see build.rs).
duckdb = { version = "1", default-features = false, features = ["bundled"] }
# Loopback HTTP bridge: the Node SEA sidecar CANNOT invoke() Rust (invoke is webview-only) and the
# stdio sidecar_rpc is Rust→Node only, so Rust hosts a tiny loopback endpoint the sidecar POSTs to.
tiny_http = "0.12"
